--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "build": "next build",
   "start": "next start",
   "lint": "next lint"
+  },
+				"dependencies": {
+				"eslint-config-next": "^13.0.4",
+				"next": "^13.0.4",
+				"react": "^18.2.0",
+				"react-dom": "^18.2.0"
   }
 }
